# zotify-API

./: .gitignore  .pre-commit-config.yaml  .safety-policy.yml  AGENTS.md  ALIGNMENT_AUDIT_2025-11-05T2230250000.md  ALIGNMENT_AUDIT_20251104T211104Z.md  AUDIT-PHASE-4.md  CHANGELOG.md  HANDOVER_BRIEF.md  LICENSE  PROJECT_DOCUMENT_ALIGNMENT.md  README.md  TRACE_INDEX.yml  api_all_routes.json  audit_endpoints.py  bandit.yml  changed_files.txt  data.db  fix_lint_errors.py  functional_test.py  generate_endpoints_doc.py  generate_openapi.py  lint-rules.yml  list_routes.py  mkdocs.yml  mypy_after_stubs.txt  mypy_baseline.txt  openapi.json  pyproject.toml  roadmap-test.sh  run_e2e_auth_test.sh  session_log.md  setup.cfg  test_single_config.sh  verification_report.md  verification_results.txt
Gonk/GonkUI/: DOCS_INDEX.md  README.md  app.py  mkdocs.yml  pyproject.toml
Gonk/GonkUI/docs/: ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  USER_MANUAL.md
Gonk/GonkUI/static/: app.js  styles.css
Gonk/GonkUI/templates/: index.html
Gonk/GonkUI/views/: __init__.py  jwt_ui.py
api/: .gitignore  MIGRATIONS.md  alembic.ini  api_all_routes.json  logging_config.yml  logging_framework.yml  main.py  minimal_test_app.py  mypy.ini  mypy_after_auth_state_fix.txt  mypy_after_cache_service_fix.txt  mypy_after_config_service_fix.txt  mypy_after_crud_fix.txt  mypy_after_db_fix.txt  mypy_after_log_critical_fix.txt  mypy_after_logging_config_fix.txt  mypy_after_main_fix.txt  mypy_after_metadata_service_fix.txt  mypy_after_network_service_fix.txt  mypy_after_rename.txt  mypy_after_search_fix.txt  mypy_after_search_service_fix.txt  mypy_after_session_fix.txt  mypy_after_spoti_client_fix.txt  mypy_after_sync_service_fix.txt  mypy_after_user_service_fix.txt  mypy_after_webhook_action_fix.txt  mypy_after_webhooks_fix.txt  mypy_from_api_dir.txt  pyproject.toml  route_audit.py  routes_check.sh  ruff.toml  test_api.sh  test_minimal_app.py  test_phase5_api.sh  test_phase6_api.sh  test_phase8_api.sh
api/alembic/: README  env.py  script.py.mako
api/alembic/versions/: 5f96175ff7c9_add_notifications_enabled_to_.py
api/api/storage/: playlists.json  zotify.db
api/api_dumps/: cache.json  logging.json  network.json
api/docs/: CHANGELOG.md  CODE_FILE_INDEX.md  CODE_QUALITY_INDEX.md  DATABASE.md  DOCS_QUALITY_INDEX.md  INSTALLATION.md  LICENSE  MANUAL.md  MASTER_INDEX.md  REGISTRY.md  full_api_reference.md  index.md
api/docs/manuals/: API_DEVELOPER_GUIDE.md  CICD.md  DEVELOPER_GUIDE.md  ERROR_HANDLING_GUIDE.md  LICENSE  LOGGING_GUIDE.md  OPERATOR_GUIDE.md  OPERATOR_MANUAL.md  QA_GATE.md  SYSTEM_INTEGRATION_GUIDE.md  SYSTEM_INTEGRATION_GUIDE_previous.md  USER_MANUAL.md
api/docs/providers/: SPOTIFY.md
api/docs/reference/: API_REFERENCE.md  CODE_DOCUMENTATION_INDEX.md  CODE_QUALITY_INDEX.md  FEATURE_SPECS.md  MASTER_INDEX.md
api/docs/reference/features/: AUTHENTICATION.md  AUTOMATED_DOCUMENTATION_WORKFLOW.md  DEVELOPER_FLEXIBLE_LOGGING_FRAMEWORK.md  PROVIDER_AGNOSTIC_EXTENSIONS.md  PROVIDER_OAUTH.md
api/docs/reference/source/: ACTIONS____INIT__.py.md  APP.js.md  APP.py.md  AUDIT_API.py.md  AUDIT_ENDPOINTS.py.md  AUTH.py.md  AUTH_STATE.py.md  BASE.py.md  CACHE.py.md  CACHE_SERVICE.py.md  CONFIG.py.md  CONFIG_MODELS.py.md  CONFIG_SERVICE.py.md  CONSOLE_HANDLER.py.md  CRUD.py.md  DATABASE_JOB_HANDLER.py.md  DATABASE____INIT__.py.md  DB.py.md  DEPS.py.md  DOWNLOAD.py.md  DOWNLOADS.PY.md  DOWNLOADS.py.md  DOWNLOAD_SERVICE.py.md  ERROR_HANDLER____INIT__.py.md  FILTERS.PY.md  FILTERS.py.md  FORMATTER.py.md  FUNCTIONAL_TEST.py.md  GENERATE_ENDPOINTS_DOC.py.md  GENERATE_OPENAPI.py.md  GENERATE_SOURCE_DOCS.py.md  GENERIC.py.md  GLOBALS.py.md  HOOKS.py.md  JSON_AUDIT_HANDLER.py.md  JWT_AUTH.py.md  LINTER.PY.md  LINTER.py.md  LOGGING_CONFIG.py.md  LOGGING_FRAMEWORK____INIT__.py.md  (+40 more)
api/docs/system/: ERROR_HANDLING_DESIGN.md  INSTALLATION.md  PRIVACY_COMPLIANCE.md  REQUIREMENTS.md  zotify-openapi-external-v1.json  zotify-openapi-external-v1.yaml
api/project/reports/: HANDOVER_BRIEF_CHATGTP.md
api/routes/: playlist.py
api/src/storage/: spotify_tokens.json
api/src/zotify_api/: auth.py  auth_state.py  config.py  create_db.py  database.py  globals.py  logging_config.py  main.py  temp_violation.py
api/src/zotify_api/core/: log_service.py
api/src/zotify_api/database/: __init__.py  crud.py  models.py  session.py
api/storage/: crud.py  playlists.json
api/tests/: README.md  __init__.py  audit_routes.sh  conftest.py  test_all_endpoints.sh  test_auth_flow.py  test_cache.py  test_config.py  test_download.py  test_downloads.py  test_e2e_auth.py  test_health.sh  test_logging.py  test_metadata.py  test_network.py  test_notifications.py  test_playlists.py  test_playlists_tracks.sh  test_spotify.py  test_stubs.py  test_sync.py  test_system.py  test_tracks.py  test_user.py  test_user_system.sh
api/tests/unit/: test_auth.py  test_cache_service.py  test_config.py  test_config_prod_guard.py  test_crud.py  test_deps.py  test_downloads_service.py  test_error_handler.py  test_error_handler_actions.py  test_flexible_logging.py  test_jwt_auth.py  test_jwt_auth_db.py  test_log_service.py  test_logging_config.py  test_logging_service.py  test_metadata_fallback.py  test_metadata_no_db.py  test_metadata_service.py  test_network_service.py  test_new_endpoints.py  test_new_logging_system.py  test_notifications_service.py  test_playlists_service.py  test_search.py  test_spoti_client.py  test_spotify_client.py  test_sync.py  test_tracks_service.py  test_user_service.py  test_user_service_db.py  test_webhooks.py
gonk-testUI/: README.md  app.py  mkdocs.yml  pyproject.toml
gonk-testUI/docs/: ARCHITECTURE.md  CHANGELOG.md  CODE_QUALITY_INDEX.md  CONTRIBUTING.md  JWT_MOCK_CLI_USER_MANUAL.md  USER_MANUAL.md
gonk-testUI/modules/: user_service_cli.py
gonk-testUI/static/: app.js  index.html  styles.css
gonk-testUI/templates/: index.html
nlp/: description_builder.py  nlp_config.py  pyproject.toml  summarizer.py  summarizer.py.ok  summarizer_client.py  summarizer_client.py.ok  summarizer_self_test.py  summarizer_self_test.py.ok
(+483 files in other folders)
