[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zotify-api"
version = "0.1.0"
description = "A REST API for the Zotify music and podcast downloader."
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "librespot @ git+https://github.com/kokarare1212/librespot-python.git",
    "ffmpy",
    "music_tag",
    "Pillow",
    "pkce",
    "protobuf==3.20.1",
    "pwinput",
    "tabulate[widechars]",
    "tqdm",
    "pytest",
    "pytest-asyncio",
    "httpx",
    "respx",
    "pydantic-settings",
    "sqlalchemy",
    "python-multipart",
    "pyyaml",
    "pytest-mock"
]

[tool.ruff]
# Point to the source directory for the 'api' project
src = ["api/src"]

# Exclude other top-level directories from linting
extend-exclude = ["zotify", "gonk-testUI", "snitch", "project", ".github"]

# Inherited from the original api/ruff.toml
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
# Inherited from api/mypy.ini and path corrected for root
mypy_path = "api/src"
python_version = "3.12"
explicit_package_bases = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
strict = false

[tool.pytest.ini_options]
testpaths = ["api/tests"]
addopts = "-v"
pythonpath = "api/src"
filterwarnings = [
    "ignore:Support for class-based `config` is deprecated:pydantic.PydanticDeprecatedSince20"
]

[tool.pytest-asyncio]
mode = "auto"
