# ID: API-250
[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zotify-api"
version = "0.1.0"
description = "Merged API + NLP environment for Zotify."
requires-python = ">=3.11"
readme = "README.md"
authors = [
    { name = "Your Name", email = "you@example.com" }
]
license = { text = "MIT" }
keywords = ["api", "nlp", "summarization", "transformers", "sentence-transformers", "spacy", "music", "download"]

urls = { Homepage = "https://github.com/Patrick010/zotify-API", Documentation = "https://github.com/Patrick010/zotify-API/wiki" }

# All dependencies installed via TOML; NLP + API merged
dependencies = [
    "fastapi",
    "uvicorn",
    "librespot @ git+https://github.com/kokarare1212/librespot-python.git",
    "ffmpy",
    "music_tag",
    "Pillow",
    "pkce",
    "protobuf==3.20.1",
    "pwinput",
    "tabulate[widechars]",
    "tqdm",
    "pytest",
    "pytest-asyncio",
    "httpx",
    "respx",
    "pydantic-settings",
    "sqlalchemy",
    "python-multipart",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "bcrypt==3.2.0",
    "pytest-cov",
    "xenon",
    "radon",
    "semgrep",
    "coverage",
    "pyyaml",
    "pytest-mock",
    "requests-mock",
    "mypy",
    "ruff",
    "bandit",
    "safety",
    "types-pyyaml",
    "sqlalchemy[mypy]",
    "black",
    "spacy>=3.6.0,<4.0",
    "nltk>=3.8.0,<4.0",
    "tqdm>=4.66.0,<5.0"
    "transformers>=4.45.0,<5.0",
    "sentence-transformers>=2.2.2,<3.0",
    "en-core-web-sm>=3.8.0"
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "mkdocs",
    "mkdocs-material",
    "pydoc-markdown",
    "mkdocs-monorepo-plugin"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203", "W503"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
filterwarnings = [
    "ignore:Support for class-based `config` is deprecated:pydantic.PydanticDeprecatedSince20"
]

[tool.pytest-asyncio]
mode = "auto"

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I"]
ignore = ["E501"]
fix = true

[tool.mypy]
python_version = "3.11"
strict = true
disallow_untyped_defs = true
warn_unused_ignores = true
warn_return_any = true

[tool.coverage.run]
branch = true
source = ["your_package"]

[tool.coverage.report]
show_missing = true
skip_covered = true
